Archive2/05/5bad9dfc8e7494/output
main.cpp:39:33: error: template argument 1 is invalid
 struct Trap<Ret Base::f(Args...)>
                                 ^
main.cpp: In member function 'void Trampoline::enable_f1()':
main.cpp:54:39: error: type/value mismatch at argument 1 in template parameter list for 'template<class T> struct Trap'
 #define TRAP(func_x) Trap<Base::func_x>::trap 
                                       ^
main.cpp:78:37: note: in expansion of macro 'TRAP'
     void enable_f1() { table.fp_1 = TRAP( func_1 ); }
                                     ^
main.cpp:54:39: error:   expected a type, got 'Base::func_1'
 #define TRAP(func_x) Trap<Base::func_x>::trap 
                                       ^
main.cpp:78:37: note: in expansion of macro 'TRAP'
     void enable_f1() { table.fp_1 = TRAP( func_1 ); }
                                     ^
main.cpp: In function 'int main()':
main.cpp:88:16: error: 'class Trampoline' has no member named 'enable_f3'
     trampoline.enable_f3(); 
                ^
